tests/tooling/fixtures/native/execution/negative/hex_literal_global_divide_by_zero.objc3
module HexLiteralGlobalDivideByZero;

let value = 0x10 / 0x0;

fn main() -> i32 {
  return value;
}
